# mailify-md

./: README.md  output_email.html  pyproject.toml  requests.txt  requirements.txt
.github/workflows/: pypi-publish.yml
bak/: dark_bak.py  dark_style_bak.css  dark_style_bak.html  light_bak.py  light_style_bak.css  light_style_bak.html
rsc/: katex.inlined.css
scripts/: gen_katex_inlined_css.py  release.py
src/: CONSTANTS.py  mailify_md.py  style.css  style.html  utils.py
src/mailify_md/: CONSTANTS.py  cli.py  mailify_md.py  utils.py
src/mailify_md/data/builtins/: katex.inlined.css
test/: test.html  test.md  test.py
test/directly_run/: test_directly_run.html
test/python_run/: test_python_run.html
